[tool.poetry]
name = "meeting-cost"
version = "0.1.0"
description = ""
authors = ["Bjoern Doebel <bjoern.doebel@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
